--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -117,10 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="artist_name" xml:space="preserve">
-    <value />
-  </data>
   <data name="song_name" xml:space="preserve">
-    <value />
+    <value>{"1", "2", "3"}</value>
   </data>
 </root>
